syntax = "proto3";
package proto_ocr_service;

import "shared.proto";

service ProtoOcrService {
    rpc TranscribeImage (TranscribeImageRequest) returns (TranscribeImageResponse);
}


message TranscribeImageRequest {
    repeated shared.ProtoImage images = 1;
}

message TranscribeImageResponse {
    repeated string texts = 1;
}